# dropspy

./: .env.example  .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml  pytest.ini  setup.py
config/: logging.yaml
scripts/: reset_data.py
src/: config.py  main.py
src/digest/: batch_writer.py
src/dropspy/: config.py  main.py
src/dropspy/pipeline/: batch.py  fetch.py  prebatch.py
src/dropspy/telegram/: api_adapter.py  types.py
src/dropspy/utils/: formatting.py  json_store.py  logging.py
src/llm/: batch_splitter.py  batch_writer.py  tokenizer.py
src/pipeline/: batch.py  fetch.py  prebatch.py  prompt_loader.py
src/telegram/: __init__.py  api_adapter.py  chat_info_fetcher.py  fetch_messages.py  get_chat_list.py  message_fetcher.py  message_store.py  types.py
src/utils/: formatting.py  json_file_store.py  json_store.py
tests/: conftest.py  test_batch_writer.py
tests/e2e/: conftest.py  test_fetch_messages_batch_write.py  test_message_fetcher_api_e2e.py
tests/e2e/pipeline/: test_fetch_e2e.py
tests/e2e/telegram/: test_api_adapter_e2e.py
tests/integration/llm/: test_batch_pipeline_with_vertex_tokenizer.py  test_batchsplit_vertex.py  test_vertex_batch_pipeline.py
tests/integration/pipeline/: test_batch_pipeline_with_vertex_tokenizer.py
tests/integration/telegram/: test_message_fetcher_integration.py
tests/unit/: test_batch_splitter.py  test_tokenizer.py
tests/unit/llm/: test_batch_splitter.py  test_batch_writer.py  test_prompt_loader.py  test_tokenizer.py
tests/unit/pipeline/: test_batch.py  test_prebatch.py  test_prompt_loader.py
(+5 files in other folders)
